# little-agent

./: .gitignore  Cargo.toml  README.md
chat-ui/: package-lock.json  package.json
chat-ui/src/: App.vue  style.css
chat-ui/src-tauri/: Cargo.toml  tauri.conf.json
chat-ui/src-tauri/.claude/: agent.toml
chat-ui/src-tauri/.claude/cron/: scheduled_tasks.json
chat-ui/src-tauri/.claude/team/: config.json
chat-ui/src-tauri/.claude/worktrees/: index.json
chat-ui/src-tauri/src/: lib.rs  main.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/cli/src/: codex_oauth_flow.rs  oauth_flow.rs
crates/commands/: Cargo.toml
crates/commands/src/: lib.rs
crates/core/src/: oauth_config.rs
crates/mcp/: Cargo.toml
crates/tools/src/: file_edit.rs
docs/superpowers/plans/: 2026-06-14-attachments.md  2026-06-14-streaming-cli.md  2026-06-15-platform-shell-tool.md
docs/superpowers/specs/: 2026-06-13-agent-config-design.md  2026-06-13-multi-provider-agent-design.md  2026-06-13-openai-sdk-provider-design.md  2026-06-14-attachments-design.md  2026-06-14-streaming-cli-design.md  2026-06-15-platform-shell-tool-design.md
src/: attachment.rs  compact.rs  config.rs  lib.rs  main.rs
src/llm/: anthropic.rs  mod.rs  openai.rs  types.rs
src/tool/: background.rs  bash.rs  cmd.rs  compact.rs  edit_file.rs  memory.rs  mod.rs  read_file.rs  subagent.rs  task.rs  team.rs  worktree.rs  write_file.rs
tool_macros/: Cargo.toml
