[package]
name = "little-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"



[dependencies]
tool_macros = { path = "./tool_macros" }
anthropic-ai-sdk = "0.2.27"
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.44" , features = ["serde"] }
cron = "0.16"
derive_builder = "0.20.2"
dotenvy = "0.15.7"
inquire = "0.9.4"
schemars = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
strum = "0.28.0"
strum_macros = "0.28.0"
tera = "1.20.1"
tokio = { version = "1.52.1", features = ["fs", "process", "sync", "time"] }
walkdir = "2.5.0"
rmcp = { version = "0.17.0", default-features = false, features = ["client", "transport-child-process"] }
